# Lector

./: .gitignore  Makefile  README.md  project.yml  rationale.md
.github/workflows/: release-dmg.yml
Lector.xcodeproj/: project.pbxproj
Lector/App/: LectorApp.swift
Lector/Input/: Command.swift  DefaultBindings.swift  KeyTrie.swift
Lector/Models/: Annotation.swift  AppState.swift  NavHistory.swift  Notifications.swift
Lector/Resources/: Info.plist
Lector/Services/: Checksum.swift  CitationDetector.swift  Database.swift  DocumentStructure.swift
Lector/Views/: ContentView.swift
Lector/Views/PDF/: AnnotationLayer.swift  PDFHostView.swift
Lector/Views/Panels/: CommandPanel.swift  QuickSelectPanel.swift  SearchPanel.swift  StatusBar.swift
Lector/Views/Settings/: PreferencesView.swift
Lector/Views/Sidebar/: TOCView.swift
LectorTests/: AnnotationTests.swift
sioyek-old/: .gitignore  CMakeLists.txt  README.md  build_linux.sh  build_mac.sh  build_mac_cmake.sh  build_mac_native.sh  pdf_viewer_build_config.pro
sioyek-old/.github/workflows/: build_and_release.yml  build_mac_dmg.yml  preview_release.yml  test.yml
sioyek-old/macos-native/: Package.swift
sioyek-old/pdf_viewer/: OpenWithApplication.cpp  OpenWithApplication.h  config.cpp  document.cpp  document.h  document_view.cpp  document_view.h  input.cpp  input_processor.cpp  input_processor.h  keys.config  main.cpp  main_widget.cpp  main_widget.h  pdf_renderer.cpp  pdf_renderer.h  pdf_view_opengl_widget.cpp  pdf_view_opengl_widget.h  prefs.config  ui.h  uimanager.cpp  uimanager.h  utils.cpp  utils.h
sioyek-old/scripts/: sioyek.py
sioyek-old/tests/: test_utils.cpp
